@@ -1,6 +1,6 @@
 ################################################################################
 #    Creme is a free/open-source Customer Relationship Management software
-#    Copyright (C) 2009-2023  Hybird
+#    Copyright (C) 2009-2025  Hybird
 #
 #    This program is free software: you can redistribute it and/or modify
 #    it under the terms of the GNU Affero General Public License as published by
@@ -198,6 +198,7 @@ class Command(BaseCommand):
         )
 
         # ----------------------------------------------------------------------
+        fatal_error = False
         self.models = set()
         dispatch_uid = 'creme_core-populate_command'
 
@@ -218,8 +219,11 @@ class Command(BaseCommand):
                         ''.join(format_exception(exc_type, exc_value, exc_traceback))
                     )
 
-            if verbosity >= 1:
-                self.stdout.write(' OK', self.style.SUCCESS)
+                fatal_error = True
+                break
+            else:
+                if verbosity >= 1:
+                    self.stdout.write(' OK', self.style.SUCCESS)
 
         pre_save.disconnect(dispatch_uid=dispatch_uid)
 
@@ -254,7 +258,9 @@ class Command(BaseCommand):
                     self.stdout.write(message)
 
         # ----------------------------------------------------------------------
-        if verbosity >= 1:
+        if fatal_error:
+            raise CommandError('Populate has been interrupted (see error above).')
+        elif verbosity >= 1:
             self.stdout.write(self.style.SUCCESS('Populate is OK.'))
 
     def _get_populator(self,
